// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlayerTimeControls render renders PlayerTimeControls component with runtime 180 and currentTimeInSeconds 100 1`] = `
<div
  className="player__controls-row"
>
  <div
    className="player__time"
  >
    <progress
      className="player__progress"
      max="100"
      value={1}
    />
    <div
      className="player__toggler"
      style={
        Object {
          "left": "1%",
        }
      }
    >
      Toggler
    </div>
  </div>
  <div
    className="player__time-value"
  >
    10:20:00
  </div>
</div>
`;

exports[`PlayerTimeControls render renders PlayerTimeControls component with runtime 180 and currentTimeInSeconds 1000 1`] = `
<div
  className="player__controls-row"
>
  <div
    className="player__time"
  >
    <progress
      className="player__progress"
      max="100"
      value={9}
    />
    <div
      className="player__toggler"
      style={
        Object {
          "left": "9%",
        }
      }
    >
      Toggler
    </div>
  </div>
  <div
    className="player__time-value"
  >
    19:20:00
  </div>
</div>
`;
